Adicionando arquivo de configuração de Vhost linux

--- a/httpd-vhosts.conf
+++ b/httpd-vhosts.conf
@@ -1,21 +1,15 @@
+/etc/apache2/000-default.conf
+
 <VirtualHost *:80>
-    ServerAdmin webmaster@hcode.com.br
-    DocumentRoot "C:/xampp/htdocs/ecommerce"
-    ServerName www.hcodecommerce.com.br
-    ErrorLog "logs/dummy-host2.example.com-error.log"
-    CustomLog "logs/dummy-host2.example.com-access.log" common
-	<Directory "C:/xampp/htdocs/ecommerce">
-        Require all granted
 
-        RewriteEngine On
+    ServerAdmin webmaster@localhost
+    ServerName localhost
+    DocumentRoot /var/www/html
 
-        RewriteCond %{REQUEST_FILENAME} !-d
-        RewriteCond %{REQUEST_FILENAME} !-f
-        RewriteRule ^ index.php [QSA,L]
-	</Directory>
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
+
 </VirtualHost>
-/////////////////////////
-ADD ESSE CODIGO EM /etc/apache2/conf-available/other-vhosts-access-log.conf
 <VirtualHost *:80>
     ServerAdmin webmaster@hcode.com.br
     DocumentRoot /var/ecommerce
