Instruções para Criação de Virtual Host
Apenas instruções para OS da distribuição Linux

--- a/httpd-vhosts.conf
+++ b/httpd-vhosts.conf
@@ -1,7 +1,14 @@
-/etc/apache2/000-default.conf
+/* 
+Esse arquivo foi usado para configuração de um Vhost cujo dominio apontava para um diretorio específico,
+Acrescente esse arquivo no arquivo 
+->/etc/apache2/000-default.conf,
+se seu OS for alguma distribuição do linux
+*/
 
+
+
+/*Configuração de quando você coloca localhost em sua URL*/
 <VirtualHost *:80>
-
     ServerAdmin webmaster@localhost
     ServerName localhost
     DocumentRoot /var/www/html
@@ -10,6 +17,8 @@
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
 </VirtualHost>
+
+/*Configuração para qualquer outro dominio que você queira usar, basta alterar as modificações*/
 <VirtualHost *:80>
     ServerAdmin webmaster@hcode.com.br
     DocumentRoot /var/ecommerce
